--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
-*{
-  background-color: black;
+/* *{ */
+  /* background-color: black;
   color: white;
+} */
+.img-fluid{
+  border-radius: 70%;
+  max-width: 50% !important;
+    height: auto;
 }
 #cv-form{
   /* display: none; */
